--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "witnessrocks",
   "type": "module",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -12,27 +12,39 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
-    "@astrojs/mdx": "^3.1.3",
-    "@astrojs/partytown": "^2.1.1",
+    "@astrojs/mdx": "3.1.6",
+    "@astrojs/partytown": "^2.1.2",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
-    "@astrojs/tailwind": "^5.1.0",
-    "@iconify-json/tabler": "^1.1.116",
-    "astro": "^4.15.1",
+    "@astrojs/tailwind": "^5.1.1",
+    "@waline/client": "^3.3.0",
+    "astro": "4.15.7",
     "astro-icon": "^1.1.0",
     "astro-pagefind": "^1.5.0",
+    "astro-seo": "^0.8.4",
+    "astro-seo-schema": "^4.0.2",
     "dayjs": "^1.11.11",
     "pagefind": "^1.1.0",
     "preline": "^2.3.0",
+    "rehype-external-links": "^3.0.0",
+    "schema-dts": "^1.1.2",
     "sharp": "^0.33.4",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
+    "@iconify-json/flagpack": "^1.1.14",
+    "@iconify-json/flat-color-icons": "^1.1.10",
+    "@iconify-json/material-symbols": "^1.2.0",
+    "@iconify-json/mdi": "^1.2.0",
+    "@iconify-json/tabler": "^1.1.115",
     "@tailwindcss/typography": "^0.5.13",
-    "prettier": "^3.2.5",
-    "prettier-plugin-astro": "^0.14.0",
-    "prettier-plugin-tailwindcss": "^0.6.2",
-    "typescript": "^5.5.2"
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.6",
+    "typescript": "^5.4.5"
+  },
+  "resolutions": {
+    "cheerio": "1.0.0-rc.12"
   },
   "packageManager": "pnpm@9.12.1+sha512.e5a7e52a4183a02d5931057f7a0dbff9d5e9ce3161e33fa68ae392125b79282a8a8a470a51dfc8a0ed86221442eb2fb57019b0990ed24fab519bf0e1bc5ccfc4"
 }
