--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,20 @@
 {
-  "extends": "astro/tsconfigs/base",
+  "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
     "strictNullChecks": true,
+    "lib": ["ES2017", "dom"],
+    "target": "es2017",
+    "module": "esnext",
     "baseUrl": ".",
     "paths": {
       "@components/*": ["src/components/*"],
+      "@seo/*": ["src/components/seo/*"],
+      "@analytics/*": ["src/components/analytics/*"],
+      "@waline/*": ["src/components/waline/*"],
       "@layouts/*": ["src/layouts/*"],
       "@utils/*": ["src/utils/*"],
       "@consts": ["src/consts.ts"]
     }
   }
 }
+
